# presignedurl-file-treatment

./: .gitignore  README.md  pyproject.toml  samconfig.toml  template.yaml
client/: download.html  download.js  entrance.html  entrance.js  env-vals.js  style.css  ul-dl-shared.js  upload.html  upload.js
src/treat/: handler.py
